# QualcommOpenCLSDKNote

./: .gitignore  Android.mk  CMakeLists.txt  README.md  build_android.sh  build_linux_oe.sh
docs/extensions/: cl_qcom_accelerated_image_ops.txt  cl_qcom_compressed_image.txt  cl_qcom_create_buffer_from_image.txt  cl_qcom_extract_image_plane.txt  cl_qcom_other_image.txt  cl_qcom_perf_hint.txt  cl_qcom_priority_hint.txt  cl_qcom_protected_context.txt  cl_qcom_subgroup_shuffle.txt  cl_qcom_vector_image_ops.txt
example_images/: create_example_images.py
src/examples/basic/: compressed_image_nv12.cpp  compressed_image_rgba.cpp  hello_world.cpp  qcom_block_match_sad.cpp  qcom_block_match_ssd.cpp  qcom_box_filter_image.cpp  qcom_convolve_image.cpp
src/examples/bayer_mipi/: bayer_mipi10_to_rgba.cpp  mipi10_to_unpacked.cpp  unpacked_bayer_to_rgba.cpp  unpacked_to_mipi10.cpp
src/examples/conversions/: nv12_to_rgba.cpp  p010_to_compressed_tp10.cpp
src/examples/convolutions/: accelerated_convolution.cpp  convolution.cpp
src/examples/fft/: fft_image.cpp  fft_matrix.cpp
src/examples/io_coherent_ion/: io_coherent_ion_buffers.cpp  io_coherent_ion_images.cpp
src/examples/linear_algebra/: buffer_matrix_multiplication.cpp  buffer_matrix_multiplication_half.cpp  buffer_matrix_transpose.cpp  image_matrix_multiplication.cpp  image_matrix_multiplication_half.cpp  image_matrix_transpose.cpp  matrix_addition.cpp
src/examples/vector_image_ops/: compressed_nv12_vector_image_ops.cpp  compressed_p010_vector_image_ops.cpp  compressed_tp10_vector_image_ops.cpp  nv12_vector_image_ops.cpp  p010_vector_image_ops.cpp  tp10_vector_image_ops.cpp
src/util/: cl_wrapper.cpp  cl_wrapper.h  half_float.cpp  half_float.h  util.cpp  util.h
toolchain/linux_embedded/: linux_embedded-toolchain.cmake
